api url bug fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -188,7 +188,7 @@
 
     <script>
         // --- CONFIGURATION ---
-        const API_URL = "https://futedu-agent-api.onrender.com/chat";
+        const API_URL = "https://recommendation-agent.onrender.com/chat";
 
         // --- DOM Elements ---
         const chatForm = document.getElementById('chatForm');
